fix(frontend): buttons should not have hover effect on mobile devices tm-574 (#647)
* feat(frontend): change buttons in the pagination to links tm-534

* feat(frontend): back config tm-534

* feat(frontend): rename props tm-534

* feat(frontend): back config tm-534

* feat(frontend): back config tm-534

* feat(frontend): disable hover for mobile tm-574

* feat(frontend): file changes fix tm-574

* feat(frontend): file changes fix 2 tm-574

* feat(frontend): resolve conflict tm-574

* feat(frontend): delete hover in feed tm-574

* fix(frontend): fix hover for samsung  tm-574

* fix(frontend): refactor custom media  tm-574

* fix(frontend): resolve conflict tm-574

--- a/apps/frontend/src/pages/notifications/styles.module.css
+++ b/apps/frontend/src/pages/notifications/styles.module.css
@@ -171,7 +171,7 @@
 	}
 }
 
-@media (hover: hover) {
+@media (--hover-active) {
 	.filter-item:hover {
 		color: unset;
 		background-color: var(--main-white);
